Most of code in. Need to change to p tags.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <div>
       <h1 class="big-headers">Discover hidden places in the world around you</h1>
       <a href="http://www.drudgereport.com">Download Excursion (Coming Soon!)</a>
+      <video src="https://492khlo3e2ekghip0vr2ofside7huetdhh3kmdfn80diahvfv44g.codecademy.cloud/resources/videos/excursion.mp4" class="img-block"/>
     </div>
 
 <!-- Section 2 -->
     <div>
       <h1 class="big-headers">Your personal travel guide</h1>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" />
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" class="img-block" />
     </div>
 
 <!-- Section 3 -->
@@ -27,7 +30,7 @@
 
 <!-- Footer -->
     <div>
-      <p>Copright Excursion</p>
+      <p id="footer">© Excursion</p>
     </div>
 
   </body>
