--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <h1 class="big-headers">Discover hidden places in the world around you</h1>
       <a href="http://www.drudgereport.com">Download Excursion (Coming Soon!)</a>
       <p>
-        <video src="resources/videos/excursion.mp4"/>
+        <video controls autoplay src="resources/videos/excursion.mp4"/>
       </p>
     </div>
 
 <!-- Section 2 -->
     <div>
-      <h1 class="big-headers">Your personal travel guide</h1>
+      <h1 class="sub-headers">Your personal travel guide</h1>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p>
         <img src="resources/images/camp.jpg" />
@@ -30,7 +30,7 @@
 
 <!-- Section 3 -->
     <div>
-      <h1 class="big-headers">Coming Soon for iPhone and Android</h1>
+      <h1 class="sub-headers">Coming Soon for iPhone and Android</h1>
       <a href="http://www.drudgereport.com">Download Excursion (Coming Soon!)</a>
     </div>
 
