--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1 class="big-headers">Discover hidden places in the world around you</h1>
       <a href="http://www.drudgereport.com">Download Excursion (Coming Soon!)</a>
       <p>
-        <video controls autoplay src="resources/videos/excursion.mp4"/>
+        <video controls autoplay loop src="resources/videos/excursion.mp4"/>
       </p>
     </div>
 
